--- a/project/app/templates/app/update_order.html
+++ b/project/app/templates/app/update_order.html
@@ -51,7 +51,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <br><br><br><br><br><br>
-<!------ update page for doctor by admin(sumit)  ---------->
+<!---------- update page for doctor by admin(sumit)  ---------->
 <form method="post">
   {% csrf_token %}
   <div class="container register-form">
@@ -71,6 +71,4 @@
         <button type="submit" class="btnSubmit">Update Order Status</button>
 
 </form>
-
-
 {% endblock content %}
